# Compiler

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  IR_pyam.txt  Program.to  assembler.sh  backend.sh  backendNASM.sh  backendSPU.sh  basa.txt  base.txt  frontend.sh  language.h  lib.asm  log.txt  make_build.sh  program  program.asm  program.txt  program_nasm.asm  rofl  run_spu.sh  spu.sh  test.asm  test_nasm.sh  test_spu.sh
.github/workflows/: workflows.yaml
DataBase/: DataBase.tree
backend/: CMakeLists.txt
backend/ELF/: CMakeLists.txt
backend/ELF/include/: translationELF.h
backend/ELF/source/: main_backend.cpp  translationELF.cpp
backend/NASM/: CMakeLists.txt
backend/NASM/include/: translationNASM.h
backend/NASM/source/: main_backend.cpp  translationNASM.cpp
backend/SPU/: CMakeLists.txt
backend/SPU/include/: translationSPU.h
backend/SPU/source/: main_backend.cpp  translationSPU.cpp
backend/include/: backend_lang.h  translation.h  translationSPU.h
backend/source/: backend_lang.cpp  main_backend.cpp  read_tree_lang.cpp  translationNASM.cpp  translationSPU.cpp  traslation.cpp  traslationSPU.cpp
backend/tree/include/: backend_lang.h  read_tree_lang.h
flags/: CMakeLists.txt
frontend/: CMakeLists.txt
frontend/include/: lexer.h  parser.h  read_lang.h  simplify_diff.h  write_ir.h  write_ir_dsl.h  write_tree_lang.h
frontend/include/Stack/: hash.h  stack.h
frontend/source/: lexer.cpp  main_frontend.cpp  parser.cpp  read_lang.cpp  simplify_diff.cpp  write_ir.cpp  write_tree_lang.cpp
libs/: CMakeLists.txt  language.h
libs/IR/include/: read_ir.h
libs/IR/source/: read_ir.cpp
libs/MyLib/: helpful.h
libs/MyLib/Assert/: print_error.h
libs/MyLib/My_stdio/: my_stdio.h
libs/flags/include/: parse_flags_lang.h  parse_mode_lang.h
libs/flags/source/: parse_flags_lang.cpp  parse_mode_lang.cpp
libs/tree/include/: connect_tree_lang.h  dump_lang.h  struct_lang.h  write_tree_lang.h
libs/tree/source/: connect_tree_lang.cpp  dump_lang.cpp  struct_lang.cpp  write_tree_lang.cpp
log/: Dump.dot  Dump.html  log.txt
middleend/include/: middleend.h
middleend/source/: middleend.cpp
scripts/: assembler.sh  backendNASM.sh  backendSPU.sh  frontend.sh  middleend.sh  run_elf.sh  run_nasm.sh  run_spu.sh  spu.sh
to_libs/: lib.asm
